Fix stretched monogram image

--- a/src/index.css
+++ b/src/index.css
@@ -221,6 +221,7 @@ a:hover.dark-blue {
 
 .mobile-nav--monogram {
   width: 100px;
+  object-fit: cover;
 }
 
 .nav-bar-item {
